# aes_dust

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  a.out  aes.c  aes.h  audit_report.html  build.bat  mctest  mctest.c  reset_git.bat  test  test.c  test128  test128.c  test2.c  test_ecb_128.c  test_lightmac.c
aeslib/: aeslib.sln  test.cpp
asm/: ax.asm  ax.s  axx.asm  axx.s
asm/amd64/: ax.s
asm/arm32/: ax.s
asm/arm64/: ax.s  axx.s
asm/msvc/: ax.asm  ax.txt  axb.asm  axx.asm
asm/x86/: ax.s
avr/: Makefile  aes-avr  aes-avr.hex  aes.c  aes.h  test.c
cmake/: aes_dustConfig.cmake.in
docs/: notes.txt
include/: aes128_cbc.h  aes128_ccm.h  aes128_cfb.h  aes128_ctr.h  aes128_eax.h  aes128_ecb.h  aes128_gcm.h  aes128_gcm_siv.h  aes128_lightmac.h  aes128_ofb.h  aes128_xts.h
lib/: aes_dust.x64.lib  aes_dust.x86.lib
msvc2022/: msvc2022.sln
msvc2022/mctest/: mctest.c
msvc2022/test128/: test128.c
pkgconfig/: aes_dust.pc.in
src/: CMakeLists.txt  Makefile  Makefile.msvc  aes.c  aes.h  aes128_cbc.c  aes128_cbc.h  aes128_ccm.c  aes128_cfb.c  aes128_ctr.c  aes128_ctr.h  aes128_eax.c  aes128_ecb.c  aes128_ecb.h  aes128_gcm.c  aes128_gcm_siv.c  aes128_lightmac.c  aes128_ofb.c  aes128_ofb.h  aes128_xts.c  aes_c.c  cbc_test.c  ctr_test.c  ecb_test.c  mctest.c  ofb_test.c  test128.c
src/asm/amd64/: ax.s
src/asm/msvc/: ax.asm  axx.asm
src/compact/: Makefile  Makefile.msvc  aes.h  mctest  mctest.c  test128  test128.c
src/compact/asm/arm64/: ax.s
src/compact/asm/avr/: Makefile  aes-avr.hex  aes.c  aes.h  ser_print.c  ser_print.h  test.c
src/compact/asm/i386/: ax.s
src/compact/asm/loongarch64/: ax.s
src/compact/asm/msvc/: ax.asm
src/compact/asm/x86_64/: ax.s
src/tiny/: aes.c
